package com.petwise.domain.appointment;

/** Service types offered by PetWise. */
public enum ServiceType {
    DAYCARE,
    HOTEL
}
